update for the day1 tutorial

--- a/Tutorial1_advance.ipynb
+++ b/Tutorial1_advance.ipynb
@@ -255,34 +255,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-09 12:38:56,592 - parse_workload_from_path_or_from_module +41 - INFO - Created workload graph with 5 nodes and 5 edges.\n",
-      "2023-02-09 12:38:56,592 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-09 12:38:56,593 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
-      "2023-02-09 12:38:56,594 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 422.96it/s]\n",
-      "2023-02-09 12:38:58,304 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 1.023e+08 and latency 1.349e+06 to outputs/Our_HW-multi_layer_LayerNode_0_completeSave.json\n",
-      "2023-02-09 12:38:58,305 - run +33 - INFO - Processing layer 1...\n",
-      "2023-02-09 12:38:58,305 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('G', 32)}.\n",
-      "2023-02-09 12:38:58,306 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 388.29it/s]\n",
-      "2023-02-09 12:39:00,170 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_1, core=1) with energy 9.055e+07 and latency 1.934e+06 to outputs/Our_HW-multi_layer_LayerNode_1_completeSave.json\n",
-      "2023-02-09 12:39:00,173 - run +33 - INFO - Processing layer 2...\n",
-      "2023-02-09 12:39:00,175 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
-      "2023-02-09 12:39:00,176 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:02<00:00, 347.58it/s]\n",
-      "2023-02-09 12:39:02,256 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_2, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-multi_layer_LayerNode_2_completeSave.json\n",
-      "2023-02-09 12:39:02,258 - run +33 - INFO - Processing layer 3...\n",
-      "2023-02-09 12:39:02,259 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
-      "2023-02-09 12:39:02,260 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 382.55it/s]\n",
-      "2023-02-09 12:39:04,148 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_3, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-multi_layer_LayerNode_3_completeSave.json\n",
-      "2023-02-09 12:39:04,149 - run +33 - INFO - Processing layer 4...\n",
-      "2023-02-09 12:39:04,150 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('G', 32)}.\n",
-      "2023-02-09 12:39:04,151 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 444.45it/s]\n",
-      "2023-02-09 12:39:05,777 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 4.249e+07 and latency 2.509e+05 to outputs/Our_HW-multi_layer_LayerNode_4_completeSave.json\n",
-      "2023-02-09 12:39:05,782 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 1, 2, 3, 4], core=[1, 1, 1, 1, 1]) with energy 3.344e+08 and latency 3.864e+06 to outputs/Our_HW-multi_layer_overall_simpleSave.json\n",
-      "2023-02-09 12:39:05,797 - run +149 - INFO - Saved pickled list of 5 CMEs to outputs/Our_HW-multi_layer_cme.pickle.\n"
+      "2023-02-09 12:57:41,068 - parse_workload_from_path_or_from_module +41 - INFO - Created workload graph with 5 nodes and 5 edges.\n",
+      "2023-02-09 12:57:41,069 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-09 12:57:41,070 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
+      "2023-02-09 12:57:41,071 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 405.33it/s]\n",
+      "2023-02-09 12:57:42,857 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 1.023e+08 and latency 1.349e+06 to outputs/Our_HW-multi_layer_LayerNode_0_completeSave.json\n",
+      "2023-02-09 12:57:42,857 - run +33 - INFO - Processing layer 1...\n",
+      "2023-02-09 12:57:42,857 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('G', 32)}.\n",
+      "2023-02-09 12:57:42,858 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 478.21it/s]\n",
+      "2023-02-09 12:57:44,369 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_1, core=1) with energy 9.055e+07 and latency 1.934e+06 to outputs/Our_HW-multi_layer_LayerNode_1_completeSave.json\n",
+      "2023-02-09 12:57:44,371 - run +33 - INFO - Processing layer 2...\n",
+      "2023-02-09 12:57:44,371 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
+      "2023-02-09 12:57:44,372 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 454.80it/s]\n",
+      "2023-02-09 12:57:45,962 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_2, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-multi_layer_LayerNode_2_completeSave.json\n",
+      "2023-02-09 12:57:45,963 - run +33 - INFO - Processing layer 3...\n",
+      "2023-02-09 12:57:45,964 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
+      "2023-02-09 12:57:45,964 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 399.12it/s]\n",
+      "2023-02-09 12:57:47,774 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_3, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-multi_layer_LayerNode_3_completeSave.json\n",
+      "2023-02-09 12:57:47,778 - run +33 - INFO - Processing layer 4...\n",
+      "2023-02-09 12:57:47,781 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('G', 32)}.\n",
+      "2023-02-09 12:57:47,782 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 433.57it/s]\n",
+      "2023-02-09 12:57:49,448 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 4.249e+07 and latency 2.509e+05 to outputs/Our_HW-multi_layer_LayerNode_4_completeSave.json\n",
+      "2023-02-09 12:57:49,451 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 1, 2, 3, 4], core=[1, 1, 1, 1, 1]) with energy 3.344e+08 and latency 3.864e+06 to outputs/Our_HW-multi_layer_overall_simpleSave.json\n",
+      "2023-02-09 12:57:49,457 - run +149 - INFO - Saved pickled list of 5 CMEs to outputs/Our_HW-multi_layer_cme.pickle.\n"
      ]
     }
    ],
@@ -352,9 +352,9 @@
     "\n",
     "# Load in the pickled CME\n",
     "with open(pickle_filename, 'rb') as fp:\n",
-    "    cme_for_the_single_layer = pickle.load(fp)\n",
+    "    cme_for_the_multi_layer = pickle.load(fp)\n",
     "\n",
-    "bar_plot_cost_model_evaluations_breakdown(cme_for_the_single_layer, save_path=\"plot_multi_layer_breakdown.png\")"
+    "bar_plot_cost_model_evaluations_breakdown(cme_for_the_multi_layer, save_path=\"plot_multi_layer_breakdown.png\")"
    ],
    "metadata": {
     "collapsed": false
@@ -507,8 +507,8 @@
     "from zigzag.visualization.results.print_mapping import print_mapping\n",
     "from zigzag.visualization.graph.memory_hierarchy import visualize_memory_hierarchy_graph\n",
     "\n",
-    "visualize_memory_hierarchy_graph(cme_for_the_single_layer[0].accelerator.cores[0].memory_hierarchy)\n",
-    "for cme in cme_for_the_single_layer:\n",
+    "visualize_memory_hierarchy_graph(cme_for_the_multi_layer[0].accelerator.cores[0].memory_hierarchy)\n",
+    "for cme in cme_for_the_multi_layer:\n",
     "    print_mapping(cme)"
    ],
    "metadata": {
