--- a/Demo1.ipynb
+++ b/Demo1.ipynb
@@ -19,7 +19,7 @@
     "                                                       pickle_filename=\"outputs/list_of_cmes.pickle\"):\n",
     "```\n",
     "##### Inputs to the function\n",
-    "- **workload**: A neural network model defined in ONNX format or ZigZag's own format. (It can be the path to the model or the model itself.\n",
+    "- **workload**: A neural network model defined in ONNX format or ZigZag's own format.\n",
     "- **accelerator**: A high-level HW architecture description.\n",
     "- **mapping**: A file that specifies core allocation, spatial mapping (optional), temporal ordering (optional), and memory operand link.\n",
     "*Note: workload (in zigzag's own format), accelerator, mapping can be the path to the module or the module itself; workload (in onnx format) should be the path to the file.*\n",
