add some hints to the tutorial

--- a/Tutorial1_advance.ipynb
+++ b/Tutorial1_advance.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "## Tutorial 1 advance: The inputs and outputs of ZigZag\n",
-    "Let's define a workload with more layers with residual/branch connection."
+    "This tutorial shows you how to define workload with more layers with residual/branch connection in ZigZag format."
    ],
    "metadata": {
     "collapsed": false
