--- a/Tutorial2.ipynb
+++ b/Tutorial2.ipynb
@@ -196,16 +196,16 @@
     "        workload_parser_stage = WorkloadParserStage\n",
     "\n",
     "    mainstage = MainStage([  # Initialize the MainStage as entry point\n",
-    "        workload_parser_stage,  # Parse the ONNX Model into the workload\n",
+    "        workload_parser_stage,  # Parse the onnx model or the user-defined workload into the zigzag internal workload format\n",
     "        AcceleratorParserStage,  # Parse the accelerator module/passthrough given accelerator\n",
     "        SimpleSaveStage,  # Save the summed CME energy and latency to a json\n",
     "        PickleSaveStage,  # Save all received CMEs in a list to a pickle file\n",
     "        SumStage,  # Sum up the received best CME across all layers of the workload\n",
     "        WorkloadStage,  # Iterate through the different layers in the workload\n",
     "        CompleteSaveStage,  # Save each processed layer to a json\n",
-    "        opt_stage,  # Reduce all CMEs, returning minimal energy/latency one\n",
+    "        opt_stage,  # Reduce all CMEs, returning minimal energy/latency/EDP one\n",
     "        SpatialMappingGeneratorStage,  # Generate multiple spatial mappings (SM)\n",
-    "        opt_stage,  # Reduce all CMEs, returning minimal energy/latency one\n",
+    "        opt_stage,  # Reduce all CMEs, returning minimal energy/latency/EDP one\n",
     "        LomaStage,  # Generate multiple temporal mappings (TM)\n",
     "        # SalsaStage,  # Generate multiple temporal mappings (TM)\n",
     "        # TemporalOrderingConversionStage,  # Based on the fixed temporal mapping order, generate one temporal mapping (TM)\n",
@@ -218,6 +218,10 @@
     "        pickle_filename=pickle_filename,  # filename for pickled list of cmes\n",
     "        loma_lpf_limit=6,  # required by LomaStage\n",
     "        loma_show_progress_bar=True,\n",
+    "        # salsa_iteration_number=1000,\n",
+    "        # salsa_start_temperature=0.05,\n",
+    "        # salsa_opt_criterion=\"latency\",\n",
+    "        # salsa_number_of_core=8\n",
     "    )\n",
     "\n",
     "    # Launch the MainStage\n",
@@ -245,14 +249,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-09 13:00:35,744 - parse_workload_from_path_or_from_module +41 - INFO - Created workload graph with 1 nodes and 0 edges.\n",
-      "2023-02-09 13:00:35,746 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-09 13:00:35,746 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
-      "2023-02-09 13:00:35,747 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:02<00:00, 265.29it/s]\n",
-      "2023-02-09 13:00:38,472 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0_completeSave.json\n",
-      "2023-02-09 13:00:38,485 - run +97 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0_simpleSave.json\n",
-      "2023-02-09 13:00:38,490 - run +149 - INFO - Saved pickled list of 1 CMEs to outputs/Our_HW-single_layer_cme.pickle.\n"
+      "2023-02-09 20:44:38,383 - parse_workload_from_path_or_from_module +41 - INFO - Created workload graph with 1 nodes and 0 edges.\n",
+      "2023-02-09 20:44:38,385 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-09 20:44:38,385 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 32), 'D2': ('C', 32)}.\n",
+      "2023-02-09 20:44:38,386 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 439.91it/s]\n",
+      "2023-02-09 20:44:40,034 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0_completeSave.json\n",
+      "2023-02-09 20:44:40,037 - run +97 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 4.950e+07 and latency 1.649e+05 to outputs/Our_HW-single_layer_LayerNode_0_simpleSave.json\n",
+      "2023-02-09 20:44:40,040 - run +149 - INFO - Saved pickled list of 1 CMEs to outputs/Our_HW-single_layer_cme.pickle.\n"
      ]
     },
     {
@@ -356,6 +360,18 @@
     "visualize_memory_hierarchy_graph(cme_for_the_single_layer[0].accelerator.cores[0].memory_hierarchy)\n",
     "for cme in cme_for_the_single_layer:\n",
     "    print_mapping(cme)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Now let's start to explore different DSE setting options!\n",
+    "1. Tradeoff the temporal mapping search time with the temporal mapping search range by changing loma_lpf_limit.\n",
+    "2. Change the LOMA temporal mapping search stage to SALSA stage, enabling multi-thread speeding up.\n",
+    "3. Fix the temporal mapping order by adding temporal order in input mapping module and also replace temporal mapping search stage (LOMA or SALSA) to fixed temporal mapping conversion stage."
    ],
    "metadata": {
     "collapsed": false
